<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15A279b" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
    </dependencies>
    <scenes>
        <!--Tap Counter View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController storyboardIdentifier="TapCounterVC" useStoryboardIdentifierAsRestorationIdentifier="YES" id="BYZ-38-t0r" customClass="TapCounterViewController" customModule="P01TapCounter" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ver-Bg-eJ2">
                                <rect key="frame" x="16" y="292" width="343" height="43"/>
                                <fontDescription key="fontDescription" type="system" pointSize="36"/>
                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KiS-Aq-HZ9">
                                <rect key="frame" x="16" y="343" width="343" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="7jZ-po-vDC"/>
                                </constraints>
                                <state key="normal" title="Tap me!"/>
                                <connections>
                                    <action selector="tapButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="xnM-bg-a4l"/>
                                </connections>
                            </button>
                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="SCe-KJ-yKI" customClass="TapCounterNavBar" customModule="P01TapCounter" customModuleProvider="target">
                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                                <items>
                                    <navigationItem title="Counter" id="Y2U-GO-5Ag">
                                        <barButtonItem key="leftBarButtonItem" title="Reset" style="plain" id="qqZ-EF-ueQ">
                                            <connections>
                                                <action selector="resetBarButtonTapped:" destination="BYZ-38-t0r" id="jJz-kF-svc"/>
                                            </connections>
                                        </barButtonItem>
                                    </navigationItem>
                                </items>
                            </navigationBar>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                        <constraints>
                            <constraint firstItem="Ver-Bg-eJ2" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="2v3-uD-P7w"/>
                            <constraint firstItem="Ver-Bg-eJ2" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="4LE-Fb-8ah"/>
                            <constraint firstItem="Ver-Bg-eJ2" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="-20" id="GRm-hk-Xl9"/>
                            <constraint firstItem="Ver-Bg-eJ2" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="hmH-Gt-bbZ"/>
                            <constraint firstItem="KiS-Aq-HZ9" firstAttribute="top" secondItem="Ver-Bg-eJ2" secondAttribute="bottom" constant="8" id="id9-Kv-SIl"/>
                            <constraint firstItem="KiS-Aq-HZ9" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="sh8-NP-6iY"/>
                            <constraint firstItem="KiS-Aq-HZ9" firstAttribute="width" secondItem="Ver-Bg-eJ2" secondAttribute="width" id="tK2-KK-sLH"/>
                        </constraints>
                    </view>
                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                    <connections>
                        <outlet property="counterLabel" destination="Ver-Bg-eJ2" id="uef-Jt-aPU"/>
                        <outlet property="resetBarButton" destination="qqZ-EF-ueQ" id="hL9-L2-a9z"/>
                        <outlet property="tapButton" destination="KiS-Aq-HZ9" id="M0W-xN-Qqa"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="359.5" y="362.5"/>
        </scene>
    </scenes>
</document>
